tests/fixtures/errors/domain_violation.gcl
// domain_violation.gcl -- value out of bounds
param mass: Mass = 5000.0 kg;
